# stargate-lite

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  MAP_OBSERVABILITY_PLAN.md  Makefile  Procfile  README.md  add_credential_types.py  connector_methods.txt  docker-compose.yml  guardian_config.toml  openapi.json  pattern_detector_integration_example.py  pyproject.toml  railway.json  requirements.txt  ruff.toml  setup.sh  store_test_creds.py  terminal-cognitive-model.md  test_qb_query.json  test_request.json
.claude/: react-typescript-perfection.skill
.claude/commands/: audit.md  implement-plan.md  verify.md
.claude/hooks/: post-edit-lint.sh  pre-commit-gate.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit-railway-readiness.yml  ci.yml  deploy-production.yml  deploy-staging.yml  promote-staging.yml
app/: auth.py  circuit_breaker.py  credential_queries.py  custom_openapi.py  database.py  env.py  errors.py  http_client.py  logging_config.py  logging_utils.py  main.py  models.py  models_webhook.py  observability.py  posthog_client.py  provenance.py  rate_limiter.py  redis_client.py  sentry_config.py
docs/: ALEQ_ARCHITECTURE.md  ARCHITECTURE.md  CLOUD_RUN.md  CONNECTOR_EXPANSION_PLAN.md  DEPLOYMENT_GUIDE.md  HTTP_CLIENT_MIGRATION_GUIDE.md  INTEGRATION_GAP_ANALYSIS_NOV2025.md  INTEGRATION_STATUS.md  LOG_SCHEMA.md  MAP_ARCHITECTURE.md  N3_API_SPEC.md  N3_STARGATE_CONTRACT.md  OPERATIONS.md  PLATFORM_DIRECTION.md  PRIMITIVES_CONTRACT.md  README.md  REAL_ACCESS_CONNECTOR_CHECKLIST.md  RELEASE_CONTROLS.md  RELEASE_GUIDE.md  S1_SURFACE_MATRIX.md  STARGATE_INTEGRATION_CONTRACT.md  TAMI-capability-schema-response.md  TAMI-schemas-export.json  capability-request-for-schema-training.md  capability-schema-response-for-tami.md  capability-schemas-for-training.json  day-1-20-tasks.md  e2b_integration_research_2026-03-27.md  financial_design.md  information-sufficiency-contract-b-tasks.md
migrations/: env.py
scripts/: add_credentials.py  check_api_contracts.py  check_file_size.py  check_function_size.py  check_provider_contracts.py  check_railway_readiness.py  generate_openapi.py  generate_zoho_books_manifest.py  guardian.py  pre-deploy-check.sh  release_check.py  release_gate.py  rollback.sh  staging-demo.sh  test_integration_contract.py  verify_release_infra.py  verify_remote_api.py
tests/: conftest.py  test_autonomous_direction.py  test_circuit_breaker.py  test_connector_status_hardening.py  test_consumer_contract.py  test_contract_compliance.py  test_e2b_artifacts.py  test_e2b_connector.py  test_execution_idempotency_scope.py  test_execution_reliability.py  test_fci_utilities.py  test_health.py  test_init_db.py  test_oauth_connector_events.py  test_openapi_contract.py  test_posthog_client.py  test_provider_contracts.py  test_railway_config.py  test_railway_readiness.py  test_rate_limiter.py  test_registry.py  test_release_gate.py  test_release_infra.py  test_s1_auth.py  test_schemas.py  test_utilities.py  test_zoho_books_parity.py
(+485 files in other folders)
