[project]
name = "your-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
# Disable import-untyped globally - we handle missing stubs via ignore_missing_imports
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "requests_oauthlib.*",
    "pythonjsonlogger.*",
    "structlog.*",
    "google.generativeai.*",
    "deepdoctection.*",
    "anthropic.*",
    "posthog.*",
    "datadog.*",
    "ddtrace.*",
    "redis.*",
    "stripe.*",
]
follow_imports = "skip"

# FCI utilities use mixin pattern and complex data transformations
[[tool.mypy.overrides]]
module = "app.utilities.fci.*"
disable_error_code = ["attr-defined", "no-any-return", "operator", "arg-type", "var-annotated", "assignment", "index"]

# Connectors also use mixins and pass dict.get() results to typed SDKs
[[tool.mypy.overrides]]
module = [
    "app.connectors.stripe.*",
    "app.connectors.shopify.*",
    "app.connectors.square.*",
    "app.connectors.gusto.*",
    "app.connectors.slack",
    "app.connectors.docusign",
    "app.connectors.gmail.*",
    "app.connectors.google_sheets",
    "app.connectors.google_drive",
    "app.connectors.google_calendar",
]
disable_error_code = ["attr-defined", "arg-type", "no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
